--- a/creation.css
+++ b/creation.css
@@ -116,7 +116,7 @@ header a span:last-child {
   animation: rotate 0.8s ease forwards;
 }
 
-.input-quiz, .input-quiz2 {
+.info-container .input-quiz {
   height: 40px;
   width: 190px;
   font-size: 18px;
@@ -130,13 +130,13 @@ header a span:last-child {
   margin-right: 15px;
 }
 
-.input-quiz2 {
-  width: 100%;
-  margin-right: 0;
+.image {
+  width: 100% !important;
+  margin-right: 0 !important;
 }
 
 .difficulty {
-  width: auto;
+  width: auto !important;
 }
 
 #pageCreate {
@@ -348,6 +348,7 @@ label {
 
 
 ::-webkit-scrollbar {
+  margin: 20px;
   width: 8px;
 }
 
