--- a/dashboard.css
+++ b/dashboard.css
@@ -13,6 +13,7 @@ body {
   background: rgb(20, 20, 20);
   transition: filter 0.4s ease;
   animation: fade 1s forwards;
+  scroll-behavior: smooth;
 }
 
 header {
@@ -331,14 +332,20 @@ label {
 
 .button-save {
   height: 40px;
-  width: 175px;
+  width: 50px;
   font-size: 18px;
   color: white;
   background-color: #ff5f45;
   border-radius: 10px;
   border: none;
   cursor: pointer;
+  transition: width 0.5s ease;
 }
+
+/* .button-save:hover {
+  content: " Ajouter";
+  width: 175px;
+} */
 
 .buttons {
   display: flex;
