--- a/creation.css
+++ b/creation.css
@@ -261,6 +261,13 @@ header a span:last-child {
   border: 2px solid white;
 }
 
+.true {
+  background-image: url(https://img.icons8.com/?size=512&id=70yRC8npwT3d&format=png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 label {
   margin-right: 15px;
 }
