--- a/home.css
+++ b/home.css
@@ -9,7 +9,7 @@
 }
 
 html body {
-  background-color: rgb(20, 20, 20);
+  background-color: #141414;
   transition: filter 0.4s ease;
   animation: fade 1s forwards;
 }
